GachaKit // i18n-jp: 信頼 -> 信憑.

--- a/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
+++ b/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
@@ -5807,7 +5807,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "公式のガチャ記録を提供するサーバーで実際に何が起こったかは、当アプリの開発チームとして断言することではありませんので、以下の説明は、観察に基づく推測です。サーバー側の偶発的な問題が起こる可能性により、ゲームサーバーから送り返されるガチャ記録データが重複したり、取扱番号に誤りがあったりする可能性があります。この結果、端末内のデータベースが汚染される可能性があります。「異常なる既存データを掃除する」スイッチがONの場合、このアプリは最新のガチャ記録を基準として、端末内のデータベースの取扱番号が正しいかどうかを点検し、誤ったデータを排除しようとします。しかし、この汚染現象により、点検中の判断が誤る可能性があります。いずれにせよ、ゲームのサービスが終了する時点で、サービス期間中のすべてのガチャ記録は、おそらくサーバー側で確定し、信頼できる結果となるでしょう。"
+            "value" : "公式のガチャ記録を提供するサーバーで実際に何が起こったかは、当アプリの開発チームとして断言することではありませんので、以下の説明は、観察に基づく推測です。サーバー側の偶発的な問題が起こる可能性により、ゲームサーバーから送り返されるガチャ記録データが重複したり、取扱番号に誤りがあったりする可能性があります。この結果、端末内のデータベースが汚染される可能性があります。「異常なる既存データを掃除する」スイッチがONの場合、このアプリは最新のガチャ記録を基準として、端末内のデータベースの取扱番号が正しいかどうかを点検し、誤ったデータを排除しようとします。しかし、この汚染現象により、点検中の判断が誤る可能性があります。いずれにせよ、ゲームのサービスが終了する時点で、サービス期間中のすべてのガチャ記録は、おそらくサーバー側で確定し、信憑できる結果となるでしょう。"
           }
         },
         "ko" : {
@@ -10348,7 +10348,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "通常アイテム命中率の信頼度は、利用可能な星5獲得回数に基づいています：\n\n• 信頼度高：≥10回\n• 信頼度中：5-9回\n• 信頼度低：3-4回\n• データ不足：<3回\n\n信頼度不足の理由：\n• 星5獲得回数が少なすぎる\n• ガチャ履歴が不完全\n• 記録を始めたばかり\n• 結果が理論上限値（50%）を超えている"
+            "value" : "通常アイテム命中率の信憑度は、利用可能な星5獲得回数に基づいています：\n\n• 信憑度高：≥10回\n• 信憑度中：5-9回\n• 信憑度低：3-4回\n• データ不足：<3回\n\n信憑度不足の理由：\n• 星5獲得回数が少なすぎる\n• ガチャ履歴が不完全\n• 記録を始めたばかり\n• 結果が理論上限値（50%）を超えている"
           }
         },
         "ko" : {
@@ -10425,7 +10425,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "信頼度指標について"
+            "value" : "信憑度指標について"
           }
         },
         "ko" : {
@@ -10502,7 +10502,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "信頼度高"
+            "value" : "信憑度高"
           }
         },
         "ko" : {
@@ -10656,7 +10656,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "信頼度低"
+            "value" : "信憑度低"
           }
         },
         "ko" : {
@@ -10733,7 +10733,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "信頼度中"
+            "value" : "信憑度中"
           }
         },
         "ko" : {
