--- a/_i18n_xliff/UnitedPizzaHelper Localizations/en.xcloc/Localized Contents/en.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/en.xcloc/Localized Contents/en.xliff
@@ -1229,7 +1229,10 @@ Empty selection indicates selecting all gacha pullers.</target>
 Reasons for insufficient confidence:
 • Too few 5-star pulls
 • Incomplete gacha history
-• Recently started recording</source>
+• Recently started recording
+• Result is higher than theoretical bounds (50%).
+
+Note: Even when "High confidence" comes out, the final interpretation rights still belong to miHoYo, and miHoYo also has the final interpretation rights for probability calculation methods, which override this app's calculation methods.</source>
         <target state="translated">The confidence of the standard item hit rate is based on the number of available 5-star pulls:
 
 • High confidence: ≥10 cases
@@ -1240,7 +1243,10 @@ Reasons for insufficient confidence:
 Reasons for insufficient confidence:
 • Too few 5-star pulls
 • Incomplete gacha history
-• Recently started recording</target>
+• Recently started recording
+• Result is higher than theoretical bounds (50%).
+
+Note: Even when "High confidence" comes out, the final interpretation rights still belong to miHoYo, and miHoYo also has the final interpretation rights for probability calculation methods, which override this app's calculation methods.</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.stats.confidence.alert.title" xml:space="preserve">
