AboutKit // Rename Tao to Hacchitao according to his request.

--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/Localizable.xcstrings
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/Localizable.xcstrings
@@ -3496,6 +3496,83 @@
         }
       }
     },
+    "aboutKit.contributors.name.hacchitao" : {
+      "comment" : "Localization Contributor (JA)",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "はっちー(たお👻🍑)"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "はっちー(たお👻🍑)"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "はっちー(たお👻🍑)"
+          }
+        },
+        "fil" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "はっちー(たお👻🍑)"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "はっちー(たお👻🍑)"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "はっちー(たお👻🍑)"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "はっちー(たお👻🍑)"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "はっちー(たお👻🍑)"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "はっちー(たお👻🍑)"
+          }
+        },
+        "vi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "はっちー(たお👻🍑)"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "はっちー(たお👻🍑)"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "はっちー(たお👻🍑)"
+          }
+        }
+      }
+    },
     "aboutKit.contributors.name.hakubill" : {
       "comment" : "Crew Member",
       "localizations" : {
@@ -4030,83 +4107,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "孫志貴 (Shiki Suen)"
-          }
-        }
-      }
-    },
-    "aboutKit.contributors.name.tao" : {
-      "comment" : "Localization Contributor (JA)",
-      "localizations" : {
-        "de" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "たお👻🍑"
-          }
-        },
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "たお👻🍑"
-          }
-        },
-        "es" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "たお👻🍑"
-          }
-        },
-        "fil" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "たお👻🍑"
-          }
-        },
-        "fr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "たお👻🍑"
-          }
-        },
-        "it" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "たお👻🍑"
-          }
-        },
-        "ja" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "たお👻🍑"
-          }
-        },
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "たお👻🍑"
-          }
-        },
-        "ru" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "たお👻🍑"
-          }
-        },
-        "vi" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "たお👻🍑"
-          }
-        },
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "たお👻🍑"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "たお👻🍑"
           }
         }
       }
